# level_2

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app_project/: database.py  error_handler.py  exceptions.py  main.py
app_project/api/v1/: dependencies.py  routes.py
app_project/consumer/: consumer.py  consumer_repository.py
app_project/migrations/: env.py
app_project/migrations/versions/: 9881ca076dad_.py  f25151d5d098_.py
app_project/models/: models.py
app_project/producer/: producer.py  producer_config.py  producer_repository.py
app_project/repositories/: task_repository.py
app_project/schemas/: task_schema.py
app_project/services/: task_service.py
tests/unit/: conftest.py
tests/unit/api/: test_tasks_api.py
