[project]
name = "level-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "httpx==0.25.2",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.21.2",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
